Usage of directives

--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,5 +1,7 @@
 
 <mat-card>
+  <mat-card-title color="primary"> My New Post
+  </mat-card-title>
 <mat-form-field>
     <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
   </mat-form-field>
