--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -2,11 +2,14 @@
 <mat-card>
   <mat-card-title color="primary"> My New Post
   </mat-card-title>
+  <mat-form-field>
+    <input matInput type="text" [(ngModel)]="enteredTitle">
+  </mat-form-field>
 <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
+    <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
   </mat-form-field>
   <button color="accent" mat-raised-button (click)="onAddPost()"> Save Post </button>
 </mat-card>
     <hr>
 
-<p>{{enteredValue}}</p>
+
