Angular Frontend module completed

--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -12,6 +12,7 @@
     name="title"
    ngModel
    required
+   placeholder="Post Title"
    minlength="3" >
    <mat-error>Please Enter appropriate Title</mat-error>
   </mat-form-field>
@@ -21,6 +22,7 @@
     name="content"
     rows="6"
    ngModel
+   placeholder="Post Content"
    required ></textarea>
    <mat-error>Please Enter appropriate content</mat-error>
   </mat-form-field>
