--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,6 +1,7 @@
 
 <mat-card>
-  <form #postForm="ngForm" (submit)="onAddPost(postForm)">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form #postForm="ngForm" *ngIf = "!isLoading" (submit)="onAddPost(postForm)">
   <mat-card-title
    color="primary">
     My New Post
