--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -17,6 +17,10 @@
    minlength="3" >
    <mat-error>Please Enter appropriate Title</mat-error>
   </mat-form-field>
+  <div>
+    <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+    <input type="file" #filePicker>
+  </div>
 <mat-form-field>
     <textarea
     matInput
