--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,7 @@
 
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form #postForm="ngForm" *ngIf = "!isLoading" (submit)="onAddPost(postForm)">
+  <form [formGroup]="form" *ngIf = "!isLoading" (submit)="onAddPost(postForm)">
   <mat-card-title
    color="primary">
     My New Post
@@ -10,12 +10,10 @@
     <input
     matInput
     type="text"
-    name="title"
-   [ngModel]="post?.title"
-   required
+    formControlName="title"
    placeholder="Post Title"
-   minlength="3" >
-   <mat-error>Please Enter appropriate Title</mat-error>
+   >
+   <mat-error *ngIf="form.get('title').invalid">Please Enter appropriate Title</mat-error>
   </mat-form-field>
   <div>
     <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
@@ -24,12 +22,12 @@
 <mat-form-field>
     <textarea
     matInput
-    name="content"
-    rows="6"
-   [ngModel]="post?.content"
-   placeholder="Post Content"
-   required ></textarea>
-   <mat-error>Please Enter appropriate content</mat-error>
+
+    formControlName= "content"
+    rows="4"
+    placeholder="Post Content"
+  ></textarea>
+   <mat-error *ngIf="form.get('content').invalid">Please Enter appropriate content</mat-error>
   </mat-form-field>
   <button
   type = "submit"
