--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,7 @@
 
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form [formGroup]="form" *ngIf = "!isLoading" (submit)="onAddPost(postForm)">
+  <form [formGroup]="form" *ngIf = "!isLoading" (submit)="onAddPost(form)">
   <mat-card-title
    color="primary">
     My New Post
@@ -17,12 +17,14 @@
   </mat-form-field>
   <div>
     <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
-    <input type="file" #filePicker>
+    <input type="file" #filePicker (change)="onImagePicked($event)">
+  </div>
+  <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+    <img [src]="imagePreview" [alt]="form.value.title">
   </div>
 <mat-form-field>
     <textarea
     matInput
-
     formControlName= "content"
     rows="4"
     placeholder="Post Content"
